src/objects/SBQQ__TimingLog__c.object
<CustomObject>
    <description>Timing stack log entry.</description>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__Element__c</fullName>
        <description>Element name</description>
        <label>Element</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Finish__c</fullName>
        <description>Finishing CPU time</description>
        <label>Finish</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Log__c</fullName>
        <description>Log entry</description>
        <inlineHelpText>Log entry</inlineHelpText>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Start__c</fullName>
        <description>Starting CPU time</description>
        <inlineHelpText>Starting CPU time</inlineHelpText>
        <label>Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Total__c</fullName>
        <description>Total CPU time consumed.</description>
        <label>Total CPU Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__URL__c</fullName>
        <description>Target of the request</description>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Timing Log</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Element__c</columns>
        <columns>SBQQ__Start__c</columns>
        <columns>SBQQ__Finish__c</columns>
        <columns>SBQQ__Total__c</columns>
        <columns>SBQQ__Log__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timing Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>